src/ui/snapshots/coxtop__ui__palette_frame__tests__renders_the_output_frame_in_the_harbor_light_theme.snap
---
source: src/ui/palette_frame.rs
assertion_line: 209
expression: "draw(ThemeId::HarborLight, &state).backend().to_string()"
---
" ┌cox─────────────────────────────────┐ "
" │alpha                               │ "
" │bravo                               │ "
" │charlie                             │ "
" │delta                               │ "
" │echo                                │ "
" │foxtrot                             │ "
" │Up Down scroll    Esc close         │ "
" └────────────────────────────────────┘ "
"                                        "
