src/ui/snapshots/coxtop__ui__palette_frame__tests__renders_the_output_frame_in_the_regatta_theme.snap
---
source: src/ui/palette_frame.rs
assertion_line: 195
expression: "draw(ThemeId::Regatta, &state).backend().to_string()"
---
" ┌cox─────────────────────────────────┐ "
" │alpha                               │ "
" │bravo                               │ "
" │charlie                             │ "
" │delta                               │ "
" │echo                                │ "
" │foxtrot                             │ "
" │Up Down scroll    Esc close         │ "
" └────────────────────────────────────┘ "
"                                        "
