src/ui/snapshots/coxtop__ui__palette_frame__tests__renders_the_output_frame_scrolled_by_two_in_the_regatta_theme.snap
---
source: src/ui/palette_frame.rs
assertion_line: 203
expression: "draw(ThemeId::Regatta, &state).backend().to_string()"
---
" ┌cox─────────────────────────────────┐ "
" │charlie                             │ "
" │delta                               │ "
" │echo                                │ "
" │foxtrot                             │ "
" │a line that runs well past the right│ "
" │                                    │ "
" │Up Down scroll    Esc close         │ "
" └────────────────────────────────────┘ "
"                                        "
