src/ui/snapshots/coxtop__ui__palette_frame__tests__renders_the_prompt_with_typed_text_in_the_regatta_theme.snap
---
source: src/ui/palette_frame.rs
assertion_line: 189
expression: "draw(ThemeId::Regatta, &state).backend().to_string()"
---
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
":runs --json                            "
